Changed accent colors, dark mode issues and spacing

--- a/src/shopware/styles/override.scss
+++ b/src/shopware/styles/override.scss
@@ -75,6 +75,8 @@ html.dark {
   --vp-c-divider: var(--c-gray-500);
   --vp-c-gutter: var(--c-gray-500);
 
+  --vp-custom-block-info-text: var(--vp-c-text-2);
+
   --vp-c-bg: var(--c-gray-900);
   --vp-c-bg-soft: var(--c-gray-700);
 
@@ -244,6 +246,7 @@ html.dark {
 
 .VPContent {
   overflow-x: hidden;
+  @apply bg-white dark:bg-#222;
 }
 
 .unstyled {
@@ -280,6 +283,26 @@ html.dark {
 .vp-doc {
   h2, h3, h4, h5, h6 {
     color: var(--c-heading-sub);
+  }
+
+  h1 {
+    @apply mb-12;
+  }
+
+  h2 {
+    @apply mt-16 mb-7 pt-7;
+  }
+
+  h3 {
+    @apply mt-10 mb-4 pt-4;
+  }
+
+  p {
+    @apply mt-0 mb-4 leading-7;
+  }
+
+  blockquote > p {
+    @apply text-gray-600 dark:text-gray-400;
   }
 }
 
@@ -386,4 +409,8 @@ html.dark {
   .content-container {
     max-width: 100%;
   }
+}
+
+.vp-doc th {
+  @apply text-#3d3d3d dark:text-#ebebeb;
 }
